--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://vahe-khachatryan.github.io/weather_app",
+  "homepage": "https://vahe-khachatryan.github.io/weather_app",
   "name": "weather",
   "version": "0.1.0",
   "private": true,
